...
            android:fontFamily="sans-serif-medium"
            android:textSize="24sp"
            android:textColor="#FFF"
            android:text="Find Jobs" />

        <TextView
            android:id="@+id/currentLocationHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Detecting Current Location..."
            android:textSize="16sp"
            android:textColor="#AAAAAA"
            android:padding="6dp"
            android:layout_marginBottom="12dp"/>


        <EditText
            android:id="@+id/userSearch"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:background="@drawable/searchbar"
            android:backgroundTint="#0066FF"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
...
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/catSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
...
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/locationSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
...
                android:src="@drawable/drop_arrow"
                android:clickable="false"
                android:focusable="false" />
        </FrameLayout>

        <EditText
            android:id="@+id/locationSearchField"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:background="@drawable/searchbar"
            android:backgroundTint="#0066FF"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
...
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/radiusSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
...
                android:src="@drawable/drop_arrow"
                android:clickable="false"
                android:focusable="false" />
        </FrameLayout>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="337dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif-medium"
...
            android:textColor="#06F"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/catSelect"
            tools:layout_editor_absoluteX="15dp" />

        <TextView
            android:id="@+id/textViewResHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/RESULT"
            android:fontFamily="sans-serif-medium"
            android:layout_margin="10dp"
            android:textColor="#FFF"
            app:layout_constraintBottom_toTopOf="@+id/resultsView"
            tools:layout_editor_absoluteX="15dp" />

        <Button
            android:id="@+id/viewOnMapBtn"
            android:layout_width="337dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#0066FF"
            android:fontFamily="sans-serif-medium"
...
