<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.maps.CurrentLocationActivity">

    <TextView
        android:id="@+id/locationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AA000000"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:padding="16dp"
        android:text="Detecting current location..." />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp" />

</FrameLayout>
