...
    <string name="INVALID_USER_TYPE">Enter select a User Type</string>
    <string name="REGISTRATION_SUCCESSFUL">Registration Successful</string>
    <string name="REGISTRATION_FAILED">Registration Failed</string>
    <string name="RESET_SEND_SUCCESSFUL">Password Successfully Reset</string>
    <string name="RESET_SEND_FAILED">Failed to Reset Password</string>
    <string name="EMAIL_NOT_EXIST">Email does not exist for any user</string>
    <string name="NO_RESULT">No Results. Try a different search</string>
    <string name="RESULT">Results</string>
    <string name="title_activity_current_location">CurrentLocation</string>
    <string name="ALREADY_APPLIED">Already Applied</string>
    <string name="APPLICATION_SUCCESS">Application Submitted</string>
    <string name="APPLICATION_FAILURE">Cover letter empty</string>
    <string-array name="statuses">
...
